--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,9 @@ input[type="number"]::-webkit-inner-spin-button {
 #options:hover,
 .btn:hover,
 .menu__item:hover,
-.menu:hover {
+.menu__close:hover,
+.number-minus:hover,
+.number-plus:hover {
   cursor: url(../images/pointer.png) 2 2, pointer;
 }
 .menu__item:hover {
